--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link href="/favicon.ico" rel="icon">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <link href="//at.alicdn.com/t/font_2143783_iq6z4ey5vu.css" rel="stylesheet">
+    <link href="/src/styles/aliFont.css" rel="stylesheet">
     <title>小兔鲜</title>
   </head>
   <body>
